--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -6,38 +6,30 @@ pipeline {
         }
     }
     
-    parameters {
-        string(name: 'BRANCH_NAME', defaultValue: 'master', description: 'Git branch to build from')
-    }
-
+    triggers { githubPush() }
+    options { timestamps() }
+    
     stages {
-        stage('Clone') {
-            steps {
-                container('git') {
-                    cleanWs()
-                    sh """
-                      git clone -b ${params.BRANCH_NAME} https://github.com/volk22kamin/basicToDoApp.git .
-                  """
-                }
-            }
-        }
         stage('Build and Push') {
+            when {
+                changeset pattern: 'client/**', comparator: 'ANT'
+            }
             steps {
                 script {
                     container('kaniko') {
                         String tag = null
-                        dir('basic-to-do-app') {
+                        dir('todo-app') {
                             String valuesFile = 'client-values.yaml'
                             def yaml = readYaml file: valuesFile
                             tag = yaml.image.tag
                         }
                         if (tag != null) {
                             sh """
-                        /kaniko/executor \
-                        --context=./client \
-                        --dockerfile=./client/Dockerfile \
-                        --destination=volk22kaimn/basic-to-do-client:${tag}
-                    """
+                                /kaniko/executor \
+                                --context=./client \
+                                --dockerfile=./client/Dockerfile \
+                                --destination=volk22kaimn/todo-app-client:${tag}
+                            """
                             currentBuild.displayName = "Build #${env.BUILD_NUMBER} - tag: ${tag}"
                         }
                     }
