sercret added to the chart

--- a/todo-app/client-values.yaml
+++ b/todo-app/client-values.yaml
@@ -2,6 +2,8 @@ replicaCount: 1
 namespace: todo
 appName: todo-app-client
 
+imagePullSecret: dockerhub-cred
+
 image:
   repository: volk22kaimn/todo-app-client
   tag: "3.1.v2"
