--- a/todo-app/mongodb-values.yaml
+++ b/todo-app/mongodb-values.yaml
@@ -44,6 +44,7 @@ networkPolicy:
     - key: appName
       value: todo-app-server
 
-
+imagePullSecret: dockerhub-cred
+  
 ingress:
   enabled: false
