--- a/todo-app/client-values.yaml
+++ b/todo-app/client-values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 namespace: todo
 appName: todo-app-client
 
-imagePullSecret: dockerhub-cred
+imagePullSecret: dockerhub-creds
 
 image:
   repository: volk22kaimn/todo-app-client
