--- a/todo-app/server-values.yaml
+++ b/todo-app/server-values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 namespace: todo
 appName: todo-app-server
 
-imagePullSecret: dockerhub-cred
+imagePullSecret: dockerhub-creds
 
 
 image:
