--- a/todo-app/client-values.yaml
+++ b/todo-app/client-values.yaml
@@ -6,7 +6,7 @@ imagePullSecret: dockerhub-creds
 
 image:
   repository: volk22kaimn/todo-app-client
-  tag: "3.1.v2"
+  tag: "1.0.0"
 
 selector:
   appName: todo-app-client
