--- a/todo-app/client-values.yaml
+++ b/todo-app/client-values.yaml
@@ -39,7 +39,7 @@ env:
   enabled: true
   variables:
     - name: API_URL
-      value: "http://134.122.84.30:30829/api/v2/todos"
+      value: "http://134.122.84.30:30829/api/v2/"
 
 readinessProbe:
   enabled: false
