--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
         }
         stage("Deploy") {
             when {
-                env.BRANCH_NAME == 'main'
+                branch 'main'
             }
             steps {
                 build job: 'CD', parameters: [string(name: 'BRANCH_NAME', value: 'main'), string(name: 'APP_TO_DEPLOY', value: 'client')]
