--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
                 branch 'main'
             }
             steps {
-                build job: 'CD', parameters: [string(name: 'BRANCH_NAME', value: 'main'), string(name: 'APP_TO_DEPLOY', value: 'client')]
+                build job: 'CD', parameters: [string(name: 'APP_TO_DEPLOY', value: 'client')]
             }
         }
     }
