--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
                 branch 'main'
             }
             steps {
-                build job: 'CD', parameters: [string(name: 'BRANCH_NAME', value: 'main'), string(name: 'APP_TO_DEPLOY', value: 'server')]
+                build job: 'CD', parameters: [string(name: 'APP_TO_DEPLOY', value: 'server')]
             }
         }
     }
