--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -13,7 +13,19 @@ pipeline {
                     container("node") {
                         dir("server") {
                             sh "npm install"
-                            sh "npm test"
+                            sh "npm test -- --reporter json > mocha.json || true"
+                        }
+                        def results = readJSON file: 'server/mocha.json'
+                        if (results == null || results.stats == null) {
+                            currentBuild.result = 'UNSTABLE'
+                            error('Test results not found or invalid')
+                        }
+                        int tests = results.stats.tests as int
+                        int passes = results.stats.passes as int
+                        int failures = results.stats.failures as int
+                        if (failures > 0 || passes < tests) {
+                            unstable("Tests not all passing: ${passes}/${tests}, failures: ${failures}")
+                            error('Failing pipeline due to test failures')
                         }
                     }
                 }
