--- a/todo-app/mongodb-values.yaml
+++ b/todo-app/mongodb-values.yaml
@@ -19,6 +19,16 @@ strategy:
 readinessProbe:
   enabled: false
 
+livenessProbe:
+  enabled: true
+  type: exec
+  command:
+    - sh
+    - -c
+    - mongosh --quiet --eval "db.adminCommand({ ping: 1 }).ok" 2>/dev/null | grep 1 || mongo --quiet --eval "db.adminCommand({ ping: 1 }).ok" | grep 1
+  initialDelaySeconds: 15
+  periodSeconds: 10
+
 service:
   portName: mongodb
   port: 27017
