--- a/todo-app/server-values.yaml
+++ b/todo-app/server-values.yaml
@@ -20,6 +20,14 @@ readinessProbe:
   initialDelaySeconds: 5
   periodSeconds: 5
 
+livenessProbe:
+  enabled: true
+  type: httpGet
+  path: /health
+  port: 3000
+  initialDelaySeconds: 10
+  periodSeconds: 10
+
 
 service:
   portName: todo-server
