--- a/todo-app/mongodb-values.yaml
+++ b/todo-app/mongodb-values.yaml
@@ -12,20 +12,16 @@ container:
   port:
     name: http 
 
+strategy: null
 
-strategy:
-  enabled: false
-
-readinessProbe:
-  enabled: false
+readinessProbe: null
 
 livenessProbe:
-  enabled: true
-  type: exec
-  command:
-    - sh
-    - -c
-    - 'mongosh --quiet --eval "db.adminCommand({ ping: 1 }).ok" 2>/dev/null | grep 1 || mongo --quiet --eval "db.adminCommand({ ping: 1 }).ok" | grep 1'
+  exec:
+    command:
+      - sh
+      - -c
+      - 'mongosh --quiet --eval "db.adminCommand({ ping: 1 }).ok" 2>/dev/null | grep 1 || mongo --quiet --eval "db.adminCommand({ ping: 1 }).ok" | grep 1'
   initialDelaySeconds: 15
   periodSeconds: 10
 
@@ -34,15 +30,12 @@ service:
   port: 27017
   type: ClusterIP
 
-env: 
-  enabled: false
+env: null
 
-command:
-  enabled: false
+command: null
   
 
 networkPolicy:
-  enabled: true
   name: mongodb-network-policy
   namespace: todo
   toPodLabels:
@@ -52,6 +45,4 @@ networkPolicy:
     - key: appName
       value: todo-app-server
 
-
-ingress:
-  enabled: false
+ingress: null
